Fix form heading line break on hover

--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -92,4 +92,8 @@
         background-color: $color-primary;
       }
    }
+
+   .heading-secondary {
+     padding: 0;
+   }
 }
