--- a/sass/main.css
+++ b/sass/main.css
@@ -831,6 +831,10 @@ body {
   background-color: #55c57a;
 }
 
+.form .heading-secondary {
+  padding: 0;
+}
+
 .popup {
   height: 100vh;
   width: 100%;
